# coolify-docker-converter

./: README.md  appwrite.yaml  pyproject.toml  test-coder.yaml
app/: converter.py  coolify-example-appwrite.yaml  docker-compose.yaml  test-appwrite.yaml
